--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
-
 # Secrets
 .env
-*.env
 
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
 *.so
-.Python
-env/
+
+# Virtual env
 venv/
-.venv/
+.env/
 
 # IDE
 .vscode/
